tests/function/missing_comma_in_params.rev
fn foo(a, b c, d, e, f) {} // error: missing comma to seperate arguments